--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/ChocolateLoverRaj/Bizz-Buzz-Boom-Bot#readme",
   "dependencies": {
+    "canvas": "^2.6.1",
     "discord.js": "^12.2.0",
-    "mongodb": "^3.5.6"
+    "image-size": "^0.8.3",
+    "mongodb": "^3.5.6",
+    "text-to-image": "^2.3.0"
   }
 }
