--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^12.2.0",
     "image-size": "^0.8.3",
     "mongodb": "^3.5.6",
-    "text-to-image": "^2.3.0"
+    "text-to-image": "^2.3.0",
+    "webp-converter": "^2.2.3"
   }
 }
