--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ChocolateLoverRaj/Bizz-Buzz-Boom-Bot#readme",
   "dependencies": {
     "canvas": "^2.6.1",
+    "cloudinary": "^1.21.0",
     "discord.js": "^12.2.0",
     "image-size": "^0.8.3",
     "jsdom": "^16.2.2",
